z-index fix for autocomplete suggestions lists.

--- a/media/css/jquery.autocomplete.css
+++ b/media/css/jquery.autocomplete.css
@@ -7,6 +7,7 @@
 	border: 1px solid WindowFrame;
 	background-color: Window;
 	overflow: hidden;
+	z-index:10000;
 }
 
 .ac_results ul {
